some more ACL editing stuff + legend updates
